Revision history for Perl module Pod-Weaver-PluginBundle-DOHERTY

{{$NEXT}}

0.003     2011-01-18
    * Require Pod::Weaver::Section::Availability v1.110091
    * Note reasons for requiring certain versions

0.002     2010-11-26
    * Add a CREDITS section

0.001     2010-10-31
    * Initial version