@@ -1,2 +1,2 @@
-Pod-Weaver-PluginBundle-DOHERTY*
+Pod-Weaver-PluginBundle-Author-DOHERTY*
 .build
