@@ -3,13 +3,13 @@ NAME
     DOHERTY does it
 
 VERSION
-    version 0.003
+    version 0.004
 
 AVAILABILITY
     The latest version of this module is available from the Comprehensive
     Perl Archive Network (CPAN). Visit <http://www.perl.com/CPAN/> to find a
     CPAN site near you, or see
-    <http://search.cpan.org/dist/Pod-Weaver-PluginBundle-DOHERTY/>.
+    <http://search.cpan.org/dist/Pod-Weaver-PluginBundle-Author-DOHERTY/>.
 
     The development version lives at
     <http://github.com/doherty/Pod-Weaver-PluginBundle-DOHERTY> and may be
@@ -22,7 +22,8 @@ BUGS AND LIMITATIONS
     No bugs have been reported.
 
     Please report any bugs or feature requests through the web interface at
-    <http://github.com/doherty/Pod-Weaver-PluginBundle-DOHERTY/issues>.
+    <http://github.com/doherty/Pod-Weaver-PluginBundle-Author-DOHERTY/issues
+    >.
 
 AUTHOR
     Mike Doherty <doherty@cpan.org>
