@@ -1,8 +1,8 @@
-name                = Pod-Weaver-PluginBundle-DOHERTY
+name                = Pod-Weaver-PluginBundle-Author-DOHERTY
 author              = Mike Doherty <doherty@cpan.org>
 license             = GPL_3
 copyright_holder    = Mike Doherty
 copyright_year      = 2010
 
-[@DOHERTY]
+[@Author::DOHERTY]
 no_twitter = 1
